--- a/.github/workflows/custom-build-windows.yml
+++ b/.github/workflows/custom-build-windows.yml
@@ -191,7 +191,7 @@ jobs:
 
       - name: Run Customization Script
         run: |
-          python customize.py --app-name "${{ inputs.app_name }}" --server-url "${{ inputs.server_url }}" --server-key "${{ inputs.server_key }}" --api-server "${{ inputs.api_server }}" --permanent-password "${{ inputs.permanent_password }}" --icon-url "${{ inputs.icon_url }}" --logo-url "${{ inputs.logo_url }}" --logo-png-url "${{ inputs.logo_png_url }}" --tray-icon-url "${{ inputs.tray_icon_url }}" --icon-png-url "${{ inputs.icon_png_url }}" --extra-args "${{ inputs.extra_args }}"
+          python customize.py --app-name "${{ inputs.app_name }}" --server-url "${{ inputs.server_url }}" --server-key "${{ inputs.server_key }}" --api-server "${{ inputs.api_server }}" --permanent-password "${{ inputs.permanent_password }}" --icon-url "${{ inputs.icon_url }}" --logo-url "${{ inputs.logo_url }}" --logo-png-url "${{ inputs.logo_png_url }}" --tray-icon-url "${{ inputs.tray_icon_url }}" --icon-png-url "${{ inputs.icon_png_url }}" --extra-args="${{ inputs.extra_args }}"
 
       - name: Build rustdesk
         run: |
