--- a/.github/workflows/custom-build-windows.yml
+++ b/.github/workflows/custom-build-windows.yml
@@ -276,7 +276,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@master
         with:
-          name: Custom-Build-Artifacts
+          name: ${{ inputs.app_name }}-build
           path: |
             ./SignOutput/*.exe
             ./rustdesk/rustdesk.exe
