--- a/.github/workflows/custom-build-windows.yml
+++ b/.github/workflows/custom-build-windows.yml
@@ -197,8 +197,10 @@ jobs:
         shell: bash
 
       - name: Run Customization Script
+        env:
+          RUSTDESK_PERMANENT_PASSWORD: ${{ inputs.permanent_password }}
         run: |
-          python customize.py --app-name "${{ inputs.app_name }}" --server-url "${{ inputs.server_url }}" --server-key "${{ inputs.server_key }}" --api-server "${{ inputs.api_server }}" --permanent-password "${{ inputs.permanent_password }}" --resources-url "${{ inputs.resources_url }}" --icon-url "${{ inputs.icon_url }}" --logo-url "${{ inputs.logo_url }}" --logo-png-url "${{ inputs.logo_png_url }}" --tray-icon-url "${{ inputs.tray_icon_url }}" --icon-png-url "${{ inputs.icon_png_url }}" --extra-args="${{ inputs.extra_args }}" --theme "${{ inputs.theme }}"
+          python customize.py --app-name "${{ inputs.app_name }}" --server-url "${{ inputs.server_url }}" --server-key "${{ inputs.server_key }}" --api-server "${{ inputs.api_server }}" --resources-url "${{ inputs.resources_url }}" --icon-url "${{ inputs.icon_url }}" --logo-url "${{ inputs.logo_url }}" --logo-png-url "${{ inputs.logo_png_url }}" --tray-icon-url "${{ inputs.tray_icon_url }}" --icon-png-url "${{ inputs.icon_png_url }}" --extra-args="${{ inputs.extra_args }}" --theme "${{ inputs.theme }}"
 
       - name: Build rustdesk
         run: |
